adding new properties to the config file  - css_includes : specify wich css files the template have to include.  - js_includes : specify wich scripts have to be loaded

--- a/template.yml
+++ b/template.yml
@@ -21,3 +21,9 @@ img_path: "img/"
 
 # Le chemin du repertoire contenant les scripts
 js_path: "js/"
+
+css_includes:
+  - "style.css"
+
+js_includes:
+  - "jquery.js"
