Adding moment.js javascript library, adding AwesomeWebFont to provide icons, fixing some bugs in moon.js and position.styl

--- a/template.yml
+++ b/template.yml
@@ -24,7 +24,10 @@ js_path: "js/"
 
 css_includes:
   - "style.css"
+  - "vendor/font-awesome.min.css"
 
 js_includes:
   - "jquery.js"
+  - "moment.min.js"
   - "moon.js"
+
