Adding new data-styles and push lib to moon.js

--- a/template.yml
+++ b/template.yml
@@ -25,6 +25,7 @@ js_path: "js/"
 css_includes:
   - "style.css"
   - "vendor/font-awesome.min.css"
+  - "vendor/cbp.css"
 
 js_includes:
   - "jquery.js"
