Adding new js lib to smooth scrolling, adding new elements to moon.js : - moonJs.scroll : enable smooth scrolling on all links. - moonJs.side : like moonJs.push, but do not push all the page, just show. Modified : side & push -> adding a [ <- back] button in the menu to close it on click.

--- a/template.yml
+++ b/template.yml
@@ -23,12 +23,13 @@ img_path: "img/"
 js_path: "js/"
 
 css_includes:
-  - "style.css"
-  - "vendor/font-awesome.min.css"
-  - "vendor/cbp.css"
+    - "style.css"
+    - "vendor/font-awesome.min.css"
+    - "vendor/cbp.css"
 
 js_includes:
-  - "jquery.js"
-  - "moment.min.js"
-  - "moon.js"
+    - "jquery.js"
+    - "moment.min.js"
+    - "jquery.scroll.min.js"
+    - "moon.js"
 
