--- a/template.yml
+++ b/template.yml
@@ -32,6 +32,7 @@ css_includes:
 
 js_includes:
     - "jquery.js"
+    - "log.js"
     - "moment.min.js"
     - "jquery.scroll.min.js"
     - "colorbox.min.js"
