Adding ajax forms on jsMoon, adding loading button styles, adding propagationDisabler on [click/change] ajax trigger events

--- a/template.yml
+++ b/template.yml
@@ -33,6 +33,7 @@ css_includes:
 
 js_includes:
     - "jquery.js"
+    - "jquery.form.js"
     - "log.js"
     - "moment.min.js"
     - "jquery.scroll.min.js"
