Adding toolbar js helpers, progressFrom methods and oolbar styles. Adding modernizr.js

--- a/template.yml
+++ b/template.yml
@@ -34,7 +34,10 @@ css_includes:
 js_includes:
     - "jquery.js"
     - "jquery.form.js"
+    - "modernizr.js"
+    - "menu.js"
     - "log.js"
+    - "progression.min.js"
     - "moment.min.js"
     - "jquery.scroll.min.js"
     - "minimalect.js"
