Using icomoon instead of font-awesome for icon-providing, fix ajaxforms

--- a/template.yml
+++ b/template.yml
@@ -23,7 +23,7 @@ img_path: "img/"
 js_path: "js/"
 
 css_includes:
-    - "vendor/font-awesome.min.css"
+    - "vendor/moon.css" #icons by icomoon
     - "vendor/cbp.css"
     - "vendor/colorbox.css"
     - "vendor/code.css"
